package com.AppVersionManagementSystem.enums;

public enum DeviceType {
    IOS,
    ANDROID
}
