@startuml
enum com.AppVersionManagementSystem.enums.DeviceType {
+  IOS
+  ANDROID
}

class com.AppVersionManagementSystem.service.impl.ConcreteAppService {
- AppVersionDetailsRepository appVersionDetailsRepository
- RolloutStrategy rolloutStrategy
- DeviceRepository deviceRepository
+ void uploadNewVersion(AppVersionDetails)
+ String createUpdatePatch(AppVersionDetails,AppVersionDetails)
+ void releaseVersion(AppVersionDetails)
+ boolean checkForInstall(Device,AppVersionDetails)
+ boolean checkForUpdates(Device,AppVersionDetails)
}


class com.AppVersionManagementSystem.model.Version {
- int majorVersion
- int minorVersion
- int patchVersion
+ int getMajorVersion()
+ int getMinorVersion()
+ int getPatchVersion()
+ String toString()
}


interface com.AppVersionManagementSystem.strategy.interfaces.RolloutStrategy {
~ void rollout(AppVersionDetails)
}

interface com.AppVersionManagementSystem.repository.interfaces.AppVersionDetailsRepository {
~ void uploadNewVersion(AppVersionDetails)
~ Version getLatestVersion()
}

class com.AppVersionManagementSystem.model.AppMetaData {
- Version minimumSupportedAndroidVersion
- Version minimumSupportedIOSVersion
+ Version getMinimumSupportedAndroidVersion()
+ Version getMinimumSupportedIOSVersion()
+ String toString()
}


interface com.AppVersionManagementSystem.repository.interfaces.DeviceRepository {
~ void update(Device,AppVersionDetails,String)
~ void addDevice(Device)
~ boolean checkForInstall(Device,AppVersionDetails)
~ boolean checkForUpdates(Device,AppVersionDetails)
~ List<Device> getAllDevices()
}

class com.AppVersionManagementSystem.repository.impl.LocalAppVersionDetailsRepository {
- Map<String,AppVersionDetails> appCache
- Version LATEST_VERSION
+ void uploadNewVersion(AppVersionDetails)
+ Version getLatestVersion()
- void validate(AppVersionDetails)
}


class com.AppVersionManagementSystem.Main {
+ {static} void main(String[])
}

class com.AppVersionManagementSystem.repository.impl.LocalDeviceRepository {
- Map<String,Device> deviceCache
+ void update(Device,AppVersionDetails,String)
+ void addDevice(Device)
+ boolean checkForInstall(Device,AppVersionDetails)
+ boolean checkForUpdates(Device,AppVersionDetails)
- boolean isAppVersionSupported(Device,AppVersionDetails)
+ List<Device> getAllDevices()
}


class com.AppVersionManagementSystem.strategy.Impl.BetaRolloutStrategy {
- DeviceRepository deviceRepository
+ void rollout(AppVersionDetails)
}


class com.AppVersionManagementSystem.model.AppVersionDetails {
- Version version
- byte[] file
- AppMetaData appMetaData
+ Version getVersion()
+ byte[] getFile()
+ AppMetaData getAppMetaData()
+ String toString()
}


class com.AppVersionManagementSystem.model.Device {
- String id
- boolean isBetaVersionEnabled
- Version appVersion
- DeviceType deviceType
- Version oSVersion
+ String getId()
+ boolean isBetaVersionEnabled()
+ Version getAppVersion()
+ void setAppVersion(Version)
+ Version getoSVersion()
+ DeviceType getDeviceType()
+ String toString()
}


interface com.AppVersionManagementSystem.service.interfaces.AppService {
~ void uploadNewVersion(AppVersionDetails)
~ String createUpdatePatch(AppVersionDetails,AppVersionDetails)
~ void releaseVersion(AppVersionDetails)
~ boolean checkForInstall(Device,AppVersionDetails)
~ boolean checkForUpdates(Device,AppVersionDetails)
}

class com.AppVersionManagementSystem.utility.AppUtility {
+ {static} void installApp(AppVersionDetails)
+ {static} void updateApp(AppVersionDetails,AppVersionDetails)
+ {static} String createDiffPack(Version,Version)
+ {static} String uploadFile(AppVersionDetails)
+ {static} String getFile(String)
}



com.AppVersionManagementSystem.service.interfaces.AppService <|.. com.AppVersionManagementSystem.service.impl.ConcreteAppService
com.AppVersionManagementSystem.repository.interfaces.AppVersionDetailsRepository <|.. com.AppVersionManagementSystem.repository.impl.LocalAppVersionDetailsRepository
com.AppVersionManagementSystem.repository.interfaces.DeviceRepository <|.. com.AppVersionManagementSystem.repository.impl.LocalDeviceRepository
com.AppVersionManagementSystem.strategy.interfaces.RolloutStrategy <|.. com.AppVersionManagementSystem.strategy.Impl.BetaRolloutStrategy
@enduml